Comment out IGB specific features/bundles etc
Now we can start the karaf instance with "./start.sh" and log into a console via kara/bin/client

However, "exit" within the karaf console does not actually work.

--- a/karaf/etc/org.apache.karaf.features.cfg
+++ b/karaf/etc/org.apache.karaf.features.cfg
@@ -40,8 +40,8 @@ featuresRepositories = \
     mvn:org.apache.karaf.features/spring/4.0.5/xml/features, \
     mvn:org.apache.karaf.features/standard/4.0.5/xml/features, \
     mvn:org.apache.karaf.features/framework/4.0.5/xml/features, \
-    mvn:org.apache.karaf.features/enterprise/4.0.5/xml/features, \
-    mvn:org.lorainelab/org.lorainelab.igb.feature/0.0.1/xml/features
+    mvn:org.apache.karaf.features/enterprise/4.0.5/xml/features
+#    mvn:org.lorainelab/org.lorainelab.igb.feature/0.0.1/xml/features
 
 #
 # Comma separated list of features to install at startup
@@ -65,8 +65,8 @@ featuresBoot = \
     bundle, \
     config, \
     kar, \
-    scr, \
-    org.lorainelab.igb.feature-bootstrap
+    scr
+#    org.lorainelab.igb.feature-bootstrap
 
 #
 # Resource repositories (OBR) that the features resolver can use
