--- a/com.github.teilzeitstudent.karafjavafx.main/pom.xml
+++ b/com.github.teilzeitstudent.karafjavafx.main/pom.xml
@@ -60,6 +60,13 @@
 			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
 
