--- a/com.github.teilzeitstudent.karafjavafx.main/pom.xml
+++ b/com.github.teilzeitstudent.karafjavafx.main/pom.xml
@@ -67,6 +67,12 @@
 			<version>1.7.7</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.teilzeitstudent</groupId>
+			<artifactId>karafjavafx.greetings.spi</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
 
