--- a/com.github.teilzeitstudent.karafjavafx.main/pom.xml
+++ b/com.github.teilzeitstudent.karafjavafx.main/pom.xml
@@ -73,6 +73,19 @@
 			<artifactId>karafjavafx.greetings.spi</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
 
